<resources>
    <string name="app_name">ReadMe</string>
    <string name="title_home">ReadMe</string>
    <string name="title_search">Поиск</string>
    <string name="title_searchresult">Результаты поиска</string>
    <string name="title_cart">Корзина</string>
    <string name="title_order">Заказ</string>
    <string name="title_mybooks">Мои книги</string>
    <string name="title_profile">Профиль</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>