<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_bnm_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_bnm_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_bnm_cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_mybooks"
        android:icon="@drawable/ic_bnm_mybooks"
        android:title="@string/title_mybooks" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_bnm_profile"
        android:title="@string/title_profile" />

</menu>