<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zlatamigas.readme.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.zlatamigas.readme.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.zlatamigas.readme.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_mybooks"
        android:name="com.zlatamigas.readme.ui.mybooks.MyBooksFragment"
        android:label="@string/title_mybooks"
        tools:layout="@layout/fragment_mybooks" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.zlatamigas.readme.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_searchresult"
        android:name="com.zlatamigas.readme.ui.searchresult.SearchResultFragment"
        android:label=""
        tools:layout="@layout/fragment_searchresult"
        />


</navigation>